--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,13 @@ code {
  
   
 }
+
+.jumbotron1 {
+  
+   
+    background-image: url('https://images.unsplash.com/photo-1612831820363-9b92f70109a4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=764&q=80');
+    background-size:cover;
+
+ 
+  
+}
