--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,14 @@ code {
  
   
 }
+
+.jumbotron2 {
+  
+   
+    background-image: url('https://images.unsplash.com/photo-1574607408385-dc664a9c5272?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80');
+    background-size:cover;
+
+ 
+  
+}
+
