--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,16 @@ code {
 
 
 }
+
+.jumbotron6 {
+  
+   
+  background-image: url('https://images.unsplash.com/photo-1591040092219-081fb773589c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80');
+  background-size:cover;
+
+
+
+}
 .color{
   background-color: rgb(218, 235, 240);
 }
